--- a/EFIMM0141_2384647.ipynb
+++ b/EFIMM0141_2384647.ipynb
@@ -21,7 +21,7 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
-        "df_ratings = pd.read_csv('/data/Airline_review.csv',\n",
+        "df_ratings = pd.read_csv('../data/Airline_review.csv',\n",
         "    usecols = ['Airline Name','Review Date', 'Type Of Traveller', 'Overall_Rating','Seat Comfort', 'Cabin Staff Service', 'Food & Beverages', 'Ground Service', 'Inflight Entertainment', 'Wifi & Connectivity', 'Value For Money', 'Recommended',],\n",
         "               parse_dates = ['Review Date'])\n",
         "df_ratings.head()"
